vlib/v/checker/tests/generic_sumtype_decl_err_c.vv
struct Just<T> {
  value T
}

struct Nothing {}

type Maybe<B> = Nothing | Just<T>

fn main() {
}
